// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`task-workflow default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: task-workflow
on:
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v6
      - name: Set git identity
        id: set_git_identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: gh-workflow-test
        id: gh_workflow_test
        run: projen gh-workflow-test
"
`;

exports[`task-workflow upload artifacts 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: task-workflow
on:
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v6
      - name: Set git identity
        id: set_git_identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: gh-workflow-test
        id: gh_workflow_test
        run: projen gh-workflow-test
      - name: Upload artifact
        id: upload_artifact
        if: always()
        uses: actions/upload-artifact@v7
        with:
          name: ./artifacts/
          path: ./artifacts/
          overwrite: true
"
`;
